working on the portfolio page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
     <title>Profile</title>
 </head>
@@ -20,21 +22,56 @@
         <nav class="teal lighten-2">
             <div class="nav-wrapper" id="centeredmenu">
                 <ul id="nav-mobile" class="hide-on-med-and-down">
-                    <li class="center-align"><a href="profile.html">About</a></li>
+                    <li class="center-align"><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="assets/documents/</li>
+                    <li><a href="assets/documents/ChrisResume2.pdf">Resume</a></li>
                 </ul>
             </div>
         </nav>
 
     </header>
 
-    <div>
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m12">
+                <h4 class="teal-text text-lighten-2 aboutMe">About Me</h4>
+                <p class="flow-text">I have always loved technology, strategy games, and troubleshooting. After working on the hardware side of technology for ten years, I am moving to the software side by becoming a full stack developer. I believe my passion for technology, strategy,
+                        and troubleshooting make me a perfect fit for being a software developer.</p>
+                <br>
+                <br>
+                <p class="flow-text">I have a passion for trying to understand people and what they believe and how they think, which is why I chose to study theology during college. This has helped shape me to become someone who can get along with people. Since college I have worked
+                        with and become friends with many diverse people through my work. Throughout my adult life, I have worked as part of a team, which has helped me to keep calm during tough times, trust my teammates, and learn how important communication is between
+                        teammates.</p>
+                <br>
+                <br>
+                <p class="flow-text">After reflecting on my life, there are a few things I am very proud of. The first is how I have been able to work my way through two different companies. At Madison Chemical, I started as an administrative assistant and became a technical sales
+                        representative. At TEA, I started as a field service engineer level 1, and ended as one of the two leads on my shift. The second is I taught myself how to program a PLC, which helped Madison Chemical gain and keep a lot of clients. The thing I
+                        am most proud of is my family, my wife and twin boys.</p>
+            </div>
+
+        </div>
 
     </div>
 
-
+    <footer class="page-footer teal lighten-2">
+        <div class="container">
+            <div class="row">
+            <div class="col l6 s12">
+                <h5 class="white-text">Connect With Me</h5>
+                <a class="grey-text text-lighten-3" href="https://github.com/cbeez07"><img src="assets/images/github-128.png" alt="github"></a>
+                <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/beesleyc07"><img src="assets/images/linkedin-128.png" alt="linkedIn"</a>
+                <a class="grey-text text-lighten-3" href="https://stackexchange.com/users/12539854/chris-beesley"><img src="assets/images/stackoverflow-128.png"</a>
+                
+            </div>
+            </div>
+        </div>
+        <div class="footer-copyright cyan darken-3">
+            <div class="container">
+            © 2018 Copyright Christopher Beesley
+            </div>
+        </div>
+     </footer>
 
 </body>
 </html>
