--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     </header>
 
+    <div class="parallax-container">
+        <div class="parallax"><img class="bgImage"src="assets/images/parallax1.jpg"></div>
+     </div>    
     <div class="container">
         <div class="row">
             <div class="col s12 m12">
@@ -49,9 +52,10 @@
                         representative. At TEA, I started as a field service engineer level 1, and ended as one of the two leads on my shift. The second is I taught myself how to program a PLC, which helped Madison Chemical gain and keep a lot of clients. The thing I
                         am most proud of is my family, my wife and twin boys.</p>
             </div>
-
         </div>
-
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img class="bgImage"src="assets/images/parallax2.jpg"></div>
     </div>
 
     <footer class="page-footer teal lighten-2">
@@ -72,6 +76,9 @@
             </div>
         </div>
      </footer>
-
+     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+     <script type="text/javascript" src="javascript/app.js"></script>
+   
 </body>
 </html>
