updates to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
    <header class="header teal lighten-2 center-align z-depth-1">
         <h4>Christopher Beesley</h4>
-        <img src="assets/images/ProfilePic.jpg" class="circle responsive-img" alt="Chris Beesley">
+        <img src="assets/images/ProfilePic.jpg" class="responsive-img" alt="Chris Beesley">
         <p>Full-Stack Web Developer</p>
 
     <nav class="teal lighten-2">
@@ -39,7 +39,7 @@
   </div>    
 
   <div class="container portfolioTop">
-      <span><i class="medium material-icons">account_box</i>Projects:</span>
+      <span><i class="medium material-icons">account_box</i>Projects: Click for more Information</span>
   </div>
 
 
@@ -51,7 +51,7 @@
         <div class="collapsible-body">
           <a href="https://cbeez07.github.io/Hangman-Game/" target="_blank">
             <img src="assets/images/hangman.png" alt="hangman" class="websitePics">
-            <span>My first Javascript game.</span>
+            <span>Using Vanilla JavaScript, HTML5 and CSS, I created a Hangman Game. In this game you have 7 guesses to guess the animal or you lose. The game will keep track of your wins and losses. </span>
           </a>
         </div>
       </li>
@@ -60,7 +60,7 @@
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/week-4-game/" target="_blank">
               <img src="assets/images/crystal.png" alt="Crystal Game" class="websitePics">
-              <span>Another Javascript game.</span>
+              <span>In this web application, I created a crystal game. I used HTML5, CSS, JavaScript and JQuery for this game. Each new game you have to reach the number without going over by clicking the crystals. In each game the crystals are worth a different amount.</span>
             </a>
         </div>
       </li>
@@ -69,7 +69,7 @@
         <div class="collapsible-body"> 
           <a href="https://cbeez07.github.io/Triviagame/" target="_blank">
             <img src="assets/images/trivia.png" alt="Crystal Game" class="websitePics">
-            <span>A How I Met Your Mother trivia game</span>
+            <span>This is a Trivia game for one of my favorite TV shows, How I Met Your Mother. I used HTML5, CSS, JavaScript, and JQuery. I used set timeout functions in order have time limits on the questions. At the end of the game it will show you the number of correct answers you gave along with the number wrong.</span>
           </a>
         </div>
   </li>
@@ -78,7 +78,7 @@
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/Giphy/" target="_blank">
               <img src="assets/images/giphy.png" alt="Crystal Game" class="websitePics">
-              <span>Using an API to pull in Giphys</span>
+              <span>For the Giphy web application, I used HTML, CSS, JavaScript, JQuery, and Bootstrap4. I used JQuery in order to render the buttons, so anyone can add a button and get the gifs for that particular character.  I also used Ajax to call the giphy API to show the gifs. If you click on the gif it will start and if you click again it will stop.</span>
             </a>
           </div>
       </li>
@@ -87,7 +87,7 @@
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/Trains/" target="_blank">
               <img src="assets/images/trainSchedule.png" alt="Crystal Game" class="websitePics">
-              <span>A Train Schedule using Firebase</span>
+              <span>The Train Schedule application allows a person to add a train name, destination, frequency and time it left to a train schedule. Using firebase, it will store the data and update the train schedule. I used HTML5, CSS, Bootrap4, JavaScript, JQuery, and Firebase.</span>
             </a>
         </div>
       </li>
@@ -96,7 +96,7 @@
         <div class="collapsible-body">
             <a href="http://mini-jeopardy-app.herokuapp.com/" target="_blank">
               <img src="assets/images/jeopardy.png" alt="Crystal Game" class="websitePics">
-              <span>Jeopardy</span>
+              <span>Working in a group of four people, we created a Jeopardy game. If you click add player you can log into Google and it will use your name for the leader board.  Each time the game refreshes it will pull from a jeopardy API and fill out the categories and questions.  We used HTML5, Bootstrap4, CSS, JavaScript, Heroku, JQuery, and Firebase.</span>
             </a>
         </div>
       </li>
