small changes and responsive

--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,12 @@
 
 <body>
 
-  <header class="header teal lighten-2 center-align z-depth-1">
+  <header class="header center-align z-depth-1">
       <h4>Christopher Beesley</h4>
       <img src="assets/images/ProfilePic.jpg" class="responsive-img" alt="Chris Beesley">
       <p>Full-Stack Web Developer</p>
 
-    <nav class="teal lighten-2">
+    <nav>
         <div class="nav-wrapper" id="centeredmenu">
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li class="center-align"><a href="index.html">About</a></li>
@@ -71,7 +71,7 @@
   </div>
 
 
-  <footer class="page-footer teal lighten-2">
+  <footer class="page-footer" id="footerOne">
     <div class="container">
         <div class="row">
         <div class="col l6 s12">
@@ -83,7 +83,7 @@
         </div>
         </div>
     </div>
-    <div class="footer-copyright cyan darken-3">
+    <div class="footer-copyright" id="footer">
         <div class="container">
         © 2018 Copyright Christopher Beesley
         </div>
