--- a/portfolio.html
+++ b/portfolio.html
@@ -16,12 +16,12 @@
 
 <body>
 
-   <header class="header teal lighten-2 center-align z-depth-1">
+   <header class="header center-align z-depth-1">
         <h4>Christopher Beesley</h4>
         <img src="assets/images/ProfilePic.jpg" class="responsive-img" alt="Chris Beesley">
         <p>Full-Stack Web Developer</p>
 
-    <nav class="teal lighten-2">
+    <nav>
         <div class="nav-wrapper" id="centeredmenu">
             <ul id="nav-mobile" class="hide-on-med-and-down">
                 <li class="center-align"><a href="index.html">About</a></li>
@@ -50,8 +50,7 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_1</i>Hangman-Game</div>
         <div class="collapsible-body">
           <a href="https://cbeez07.github.io/Hangman-Game/" target="_blank">
-            <img src="assets/images/hangman.png" alt="hangman" class="websitePics">
-            <span>Using Vanilla JavaScript, HTML5 and CSS, I created a Hangman Game. In this game you have 7 guesses to guess the animal or you lose. The game will keep track of your wins and losses. </span>
+            <span class="span">Using Vanilla JavaScript, HTML5 and CSS, I created a Hangman Game. In this game you have 7 guesses to guess the animal or you lose. The game will keep track of your wins and losses. </span><img src="assets/images/hangman.png" alt="hangman" class="websitePics">
           </a>
         </div>
       </li>
@@ -59,8 +58,8 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_2</i>Crystal Game</div>
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/week-4-game/" target="_blank">
+              <span class="span">In this web application, I created a crystal game. I used HTML5, CSS, JavaScript and JQuery for this game. Each new game you have to reach the number without going over by clicking the crystals. In each game the crystals are worth a different amount.</span>
               <img src="assets/images/crystal.png" alt="Crystal Game" class="websitePics">
-              <span>In this web application, I created a crystal game. I used HTML5, CSS, JavaScript and JQuery for this game. Each new game you have to reach the number without going over by clicking the crystals. In each game the crystals are worth a different amount.</span>
             </a>
         </div>
       </li>
@@ -68,8 +67,8 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_3</i>Trivia Game</div>
         <div class="collapsible-body"> 
           <a href="https://cbeez07.github.io/Triviagame/" target="_blank">
+            <span class="span">This is a Trivia game for one of my favorite TV shows, How I Met Your Mother. I used HTML5, CSS, JavaScript, and JQuery. I used set timeout functions in order have time limits on the questions. At the end of the game it will show you the number of correct answers you gave along with the number wrong.</span>
             <img src="assets/images/trivia.png" alt="Crystal Game" class="websitePics">
-            <span>This is a Trivia game for one of my favorite TV shows, How I Met Your Mother. I used HTML5, CSS, JavaScript, and JQuery. I used set timeout functions in order have time limits on the questions. At the end of the game it will show you the number of correct answers you gave along with the number wrong.</span>
           </a>
         </div>
   </li>
@@ -77,8 +76,8 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_4</i>Giphy</div>
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/Giphy/" target="_blank">
+              <span class="span">For the Giphy web application, I used HTML, CSS, JavaScript, JQuery, and Bootstrap4. I used JQuery in order to render the buttons, so anyone can add a button and get the gifs for that particular character.  I also used Ajax to call the giphy API to show the gifs. If you click on the gif it will start and if you click again it will stop.</span>
               <img src="assets/images/giphy.png" alt="Crystal Game" class="websitePics">
-              <span>For the Giphy web application, I used HTML, CSS, JavaScript, JQuery, and Bootstrap4. I used JQuery in order to render the buttons, so anyone can add a button and get the gifs for that particular character.  I also used Ajax to call the giphy API to show the gifs. If you click on the gif it will start and if you click again it will stop.</span>
             </a>
           </div>
       </li>
@@ -86,8 +85,8 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_5</i>Train Schedule</div>
         <div class="collapsible-body">
             <a href="https://cbeez07.github.io/Trains/" target="_blank">
+              <span class="span">The Train Schedule application allows a person to add a train name, destination, frequency and time it left to a train schedule. Using firebase, it will store the data and update the train schedule. I used HTML5, CSS, Bootrap4, JavaScript, JQuery, and Firebase.</span>
               <img src="assets/images/trainSchedule.png" alt="Crystal Game" class="websitePics">
-              <span>The Train Schedule application allows a person to add a train name, destination, frequency and time it left to a train schedule. Using firebase, it will store the data and update the train schedule. I used HTML5, CSS, Bootrap4, JavaScript, JQuery, and Firebase.</span>
             </a>
         </div>
       </li>
@@ -95,8 +94,8 @@
         <div class="collapsible-header teal-text"><i class="material-icons">filter_6</i>Jeopardy</div>
         <div class="collapsible-body">
             <a href="http://mini-jeopardy-app.herokuapp.com/" target="_blank">
+              <span class="span">Working in a group of four people, we created a Jeopardy game. If you click add player you can log into Google and it will use your name for the leader board.  Each time the game refreshes it will pull from a jeopardy API and fill out the categories and questions.  We used HTML5, Bootstrap4, CSS, JavaScript, Heroku, JQuery, and Firebase.</span>
               <img src="assets/images/jeopardy.png" alt="Crystal Game" class="websitePics">
-              <span>Working in a group of four people, we created a Jeopardy game. If you click add player you can log into Google and it will use your name for the leader board.  Each time the game refreshes it will pull from a jeopardy API and fill out the categories and questions.  We used HTML5, Bootstrap4, CSS, JavaScript, Heroku, JQuery, and Firebase.</span>
             </a>
         </div>
       </li>
@@ -109,7 +108,7 @@
   </div>
 
 
-  <footer class="page-footer teal lighten-2">
+  <footer class="page-footer" id="footerOne">
     <div class="container">
         <div class="row">
         <div class="col l6 s12">
@@ -121,7 +120,7 @@
         </div>
         </div>
     </div>
-    <div class="footer-copyright cyan darken-3">
+    <div class="footer-copyright" id="footer">
         <div class="container">
         © 2018 Copyright Christopher Beesley
         </div>
