--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav>
                 <div class="nav-wrapper" id="centeredmenu">
-                    <a href="#" data-activates="slide-out" class="button-collapse">
+                    <a href="#" data-activates="mobile-demo" class="button-collapse">
                         <i class="material-icons">menu</i>
                     </a>
                     <ul id="nav-mobile" class="hide-on-med-and-down">
@@ -40,7 +40,7 @@
                             <a href="assets/documents/ChrisResume2.pdf">Resume</a>
                         </li>
                     </ul>
-                    <ul class="side-nav" id="slide-out">
+                    <ul class="side-nav" id="mobile-demo">
                         <li class="zIndex">
                             <a href="index.html">About</a>
                         </li>
