--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <title>Contact | Chris Beesley</title>
@@ -21,16 +22,41 @@
       <img src="assets/images/ProfilePic.jpg" class="responsive-img" alt="Chris Beesley">
       <p>Full-Stack Web Developer</p>
 
-    <nav>
-        <div class="nav-wrapper" id="centeredmenu">
-            <ul id="nav-mobile" class="hide-on-med-and-down">
-                <li class="center-align"><a href="index.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="assets/documents/ChrisResume2.pdf">Resume</a></li>
-            </ul>
-        </div>
-    </nav>
+      <nav>
+          <div class="nav-wrapper" id="centeredmenu">
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+                  <i class="material-icons">menu</i>
+              </a>
+              <ul id="nav-mobile" class="hide-on-med-and-down">
+                  <li class="center-align">
+                      <a href="index.html">About</a>
+                  </li>
+                  <li>
+                      <a href="portfolio.html">Portfolio</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">Contact</a>
+                  </li>
+                  <li>
+                      <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+                  </li>
+              </ul>
+          </div>
+      </nav>
+      <ul class="sidenav" id="mobile-demo">
+          <li>
+              <a href="index.html">About</a>
+          </li>
+          <li>
+              <a href="portfolio.html">Portfolio</a>
+          </li>
+          <li>
+              <a href="contact.html">Contact</a>
+          </li>
+          <li>
+              <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+          </li>
+      </ul>
 
   </header>
   <div class="parallax-container">
@@ -45,20 +71,20 @@
         <div class="row">
           <div class="input-field col m6 s12">
             <i class="material-icons prefix">account_circle</i>
-            <input id="icon_prefix" type="text" class="validate">
+            <input id="icon_prefix" type="text" class="validate name" required>
             <label for="icon_prefix">Name</label>
           </div>
           <div class="input-field col m6 s12">
             <i class="material-icons prefix">email</i>
-            <input id="icon_telephone" type="tel" class="validate">
+            <input id="icon_telephone" type="text" class="validate email" required>
             <label for="icon_telephone">Email</label>
           </div>
           <div class="input-field col s12">
             <i class="material-icons prefix">mode_edit</i>
-            <textarea id="icon_prefix2" class="materialize-textarea"></textarea>
+            <textarea id="icon_prefix2" class="materialize-textarea message"></textarea>
             <label for="icon_prefix2">Message</label>
           </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+          <button data-target='modal1' class="btn waves-effect waves-light modal-trigger" type="submit" name="action" id="submit-button">Submit
             <i class="material-icons right">send</i>
           </button>
         </div>
@@ -70,6 +96,15 @@
     <div class="parallax"><img class="bgImage"src="assets/images/parallax2.jpg"></div>
   </div>
 
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Your Message Has Been Submitted!</h4>
+      <p id="thanks">Thank you for contacting me. I will get back to you as soon as I can.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
 
   <footer class="page-footer" id="footerOne">
     <div class="container">
@@ -89,9 +124,10 @@
         </div>
     </div>
   </footer>
-    
+  
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script> 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script type="text/javascript" src="javascript/app.js"></script>
 
 </body>
