--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 
     <title>Profile</title>
 </head>
@@ -22,41 +22,40 @@
         <p>Full-Stack Web Developer</p>
 
         <nav>
-                <div class="nav-wrapper" id="centeredmenu">
-                    <a href="#" data-activates="mobile-demo" class="button-collapse">
-                        <i class="material-icons">menu</i>
-                    </a>
-                    <ul id="nav-mobile" class="hide-on-med-and-down">
-                        <li class="center-align">
-                            <a href="index.html">About</a>
-                        </li>
-                        <li>
-                            <a href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">Contact</a>
-                        </li>
-                        <li>
-                            <a href="assets/documents/ChrisResume2.pdf">Resume</a>
-                        </li>
-                    </ul>
-                    <ul class="side-nav" id="mobile-demo">
-                        <li class="zIndex">
-                            <a href="index.html">About</a>
-                        </li>
-                        <li class="zIndex">
-                            <a href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="zIndex">
-                            <a href="contact.html">Contact</a>
-                        </li>
-                        <li class="zIndex">
-                            <a href="assets/documents/ChrisResume2.pdf">Resume</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        
+            <div class="nav-wrapper" id="centeredmenu">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul id="nav-mobile" class="hide-on-med-and-down">
+                    <li class="center-align">
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <a href="index.html">About</a>
+            </li>
+            <li>
+                <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+            </li>
+        </ul>
 
     </header>
 
@@ -127,7 +126,7 @@
         </div>
     </footer>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script type="text/javascript" src="javascript/app.js"></script>
 
 </body>
