--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style2.css">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <title>Portfolio | Chris Beesley</title>
@@ -21,16 +22,41 @@
         <img src="assets/images/ProfilePic.jpg" class="responsive-img" alt="Chris Beesley">
         <p>Full-Stack Web Developer</p>
 
-    <nav>
-        <div class="nav-wrapper" id="centeredmenu">
-            <ul id="nav-mobile" class="hide-on-med-and-down">
-                <li class="center-align"><a href="index.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="assets/documents/ChrisResume2.pdf">Resume</a></li>
-            </ul>
-        </div>
-    </nav>
+        <nav>
+            <div class="nav-wrapper" id="centeredmenu">
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger">
+                    <i class="material-icons">menu</i>
+                </a>
+                <ul id="nav-mobile" class="hide-on-med-and-down">
+                    <li class="center-align">
+                        <a href="index.html">About</a>
+                    </li>
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="sidenav" id="mobile-demo">
+            <li>
+                <a href="index.html">About</a>
+            </li>
+            <li>
+                <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+            </li>
+        </ul>
 
   </header>
   <div class="parallax-container">
@@ -45,7 +71,7 @@
 
   
   <div class="container">
-    <ul class="collapsible" data-collapsible="accordion">
+    <ul class="collapsible popout" data-collapsible="accordion">
       <li>
         <div class="collapsible-header teal-text"><i class="material-icons">filter_1</i>Hangman-Game</div>
         <div class="collapsible-body">
@@ -128,7 +154,7 @@
   </footer>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   <script type="text/javascript" src="javascript/app.js"></script>
 </body>
 
