update contact form

--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
 
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>Your Message Has Been Submitted!</h4>
+      <h4 id="modalHeader">Your Message Has Been Submitted!</h4>
       <p id="thanks">Thank you for contacting me. I will get back to you as soon as I can.</p>
     </div>
     <div class="modal-footer">
