--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+                        <a href="assets/documents/ChrisBeesleyResume.pdf" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -54,7 +54,7 @@
                 <a href="contact.html">Contact</a>
             </li>
             <li>
-                <a href="assets/documents/ChrisResume2.pdf">Resume</a>
+                <a href="assets/documents/ChrisBeesleyResume.pdf" target="_blank">Resume</a>
             </li>
         </ul>
 
