--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <title>Profile</title>
+    <title>Resume</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
                         <a href="contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="assets/documents/ChrisBeesleyResume.pdf" target="_blank">Resume</a>
+                        <a href="resume.html">Resume</a>
                     </li>
                 </ul>
             </div>
@@ -53,56 +53,29 @@
                 <a href="contact.html">Contact</a>
             </li>
             <li>
-                <a href="assets/documents/ChrisBeesleyResume.pdf" target="_blank">Resume</a>
+                <a href="assets/documents/ChrisResume2.pdf">Resume</a>
             </li>
         </ul>
 
     </header>
-
-
-
-
 
     <div class="parallax-container">
         <div class="parallax">
             <img class="bgImage" src="assets/images/parallax1.jpg">
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col s12 m12">
-                <h4 class="teal-text text-lighten-2 aboutMe">About Me</h4>
-                <div id="paragraph">
-                    <p class="flow-text">I have always loved technology, strategy games, and troubleshooting. After working on the hardware side
-                        of technology for ten years, I am moving to the software side by becoming a full stack developer.
-                        I believe my passion for technology, strategy, and troubleshooting make me a perfect fit for being
-                        a software developer.</p>
-                    <br>
-                    <br>
-                    <p class="flow-text">I have a passion for trying to understand people and what they believe and how they think, which is why
-                        I chose to study theology during college. This has helped shape me to become someone who can get
-                        along with people. Since college I have worked with and become friends with many diverse people through
-                        my work. Throughout my adult life, I have worked as part of a team, which has helped me to keep calm
-                        during tough times, trust my teammates, and learn how important communication is between teammates.
-                    </p>
-                    <br>
-                    <br>
-                    <p class="flow-text">After reflecting on my life, there are a few things I am very proud of. The first is how I have been
-                        able to work my way through two different companies. At Madison Chemical, I started as an administrative
-                        assistant and became a technical sales representative. At TEA, I started as a field service engineer
-                        level 1, and ended as one of the two leads on my shift. The second is I taught myself how to program
-                        a PLC, which helped Madison Chemical gain and keep a lot of clients. The thing I am most proud of
-                        is my family, my wife and twin boys.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <div class="canva-embed" data-height-ratio="1.2941" data-design-id="DAC1LU_GS3I" style="padding:129.41% 5px 5px 5px;background:rgba(0,0,0,0.03);border-radius:8px;"></div><script async src="https://sdk.canva.com/v1/embed.js"></script><a href="https://www.canva.com/design/DAC1LU_GS3I/view?utm_content=DAC1LU_GS3I&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank">Christopher Beesley</a> by <a href="https://www.canva.com/beesleychc?utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank">Chris Beesley</a>
+
+    <!-- <div>
+        <embed src="assets/documents/ChrisBeesleyResume.pdf" width="500" height="375" type='application/pdf'>  
+    </div>   -->
+    
     <div class="parallax-container">
         <div class="parallax">
             <img class="bgImage" src="assets/images/parallax2.jpg">
         </div>
     </div>
-
     <footer class="page-footer" id="footerOne">
         <div class="container">
             <div class="row">
