--- a/portfolio.html
+++ b/portfolio.html
@@ -75,27 +75,36 @@
       <li>
         <div class="collapsible-header teal-text"><i class="material-icons">filter_1</i>Hangman-Game</div>
         <div class="collapsible-body">
-          <a href="https://cbeez07.github.io/Hangman-Game/" target="_blank">
-            <span class="span">Using Vanilla JavaScript, HTML5 and CSS, I created a Hangman Game. In this game you have 7 guesses to guess the animal or you lose. The game will keep track of your wins and losses. </span><img src="assets/images/hangman.png" alt="hangman" class="websitePics">
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="collapsible-header teal-text"><i class="material-icons">filter_2</i>Crystal Game</div>
-        <div class="collapsible-body">
-            <a href="https://cbeez07.github.io/week-4-game/" target="_blank">
-              <span class="span">In this web application, I created a crystal game. I used HTML5, CSS, JavaScript and JQuery for this game. Each new game you have to reach the number without going over by clicking the crystals. In each game the crystals are worth a different amount.</span>
-              <img src="assets/images/crystal.png" alt="Crystal Game" class="websitePics">
+            <a href="https://cbeez07.github.io/Hangman-Game/" target="_blank">
+                <span class="span">Using Vanilla JavaScript, HTML5 and CSS, I created a Hangman Game. In this game you have 7 guesses to guess the animal or you lose. The game will keep track of your wins and losses. </span><img src="assets/images/hangman.png" alt="hangman" class="websitePics">
+            </a>
+            <a href="https://github.com/cbeez07/Hangman-Game" target="_blank">
+                <span class="span">Code</span>
             </a>
         </div>
       </li>
       <li>
-        <div class="collapsible-header teal-text"><i class="material-icons">filter_3</i>Trivia Game</div>
+        <div class="collapsible-header teal-text"><i class="material-icons">filter_2</i>Devour Burger</div>
+        <div class="collapsible-body">
+            <a href="https://devoured-burger.herokuapp.com/" target="_blank">
+              <span class="span">In this web application, I created Devour Buger. It is a simple web app, but it is was my first Full-Stack web application. It it you can create a burger, and then devour the burger.</span>
+              <img src="assets/images/burger.png" alt="Burger Game" class="websitePics">
+            </a>
+            <a href="https://github.com/cbeez07/Burger" target="_blank">
+                <span class="span">Code</span>
+            </a>
+        </div>
+      </li>
+      <li>
+        <div class="collapsible-header teal-text"><i class="material-icons">filter_3</i>Food for Travelling</div>
         <div class="collapsible-body"> 
-          <a href="https://cbeez07.github.io/Triviagame/" target="_blank">
-            <span class="span">This is a Trivia game for one of my favorite TV shows, How I Met Your Mother. I used HTML5, CSS, JavaScript, and JQuery. I used set timeout functions in order have time limits on the questions. At the end of the game it will show you the number of correct answers you gave along with the number wrong.</span>
-            <img src="assets/images/trivia.png" alt="Crystal Game" class="websitePics">
-          </a>
+            <a href="https://traveling-food.herokuapp.com/" target="_blank">
+                <span class="span">This was a group project. We created an app that will let a restaurant sign up to the app and post daily food and drink specials. In a later version we will push the information to a user page.</span>
+            <img src="assets/images/TravelingFood.png" alt="Traveling-Food" class="websitePics">
+            </a>
+            <a href="https://github.com/cbeez07/traveling-food" target="_blank">
+                <span class="span">Code</span>
+            </a>
         </div>
   </li>
       <li>
@@ -104,6 +113,9 @@
             <a href="https://cbeez07.github.io/Giphy/" target="_blank">
               <span class="span">For the Giphy web application, I used HTML, CSS, JavaScript, JQuery, and Bootstrap4. I used JQuery in order to render the buttons, so anyone can add a button and get the gifs for that particular character.  I also used Ajax to call the giphy API to show the gifs. If you click on the gif it will start and if you click again it will stop.</span>
               <img src="assets/images/giphy.png" alt="Crystal Game" class="websitePics">
+            </a>
+            <a href="https://github.com/cbeez07/Giphy" target="_blank">
+                <span class="span">Code</span>
             </a>
           </div>
       </li>
@@ -114,6 +126,9 @@
               <span class="span">The Train Schedule application allows a person to add a train name, destination, frequency and time it left to a train schedule. Using firebase, it will store the data and update the train schedule. I used HTML5, CSS, Bootrap4, JavaScript, JQuery, and Firebase.</span>
               <img src="assets/images/trainSchedule.png" alt="Crystal Game" class="websitePics">
             </a>
+            <a href="https://github.com/cbeez07/Trains" target="_blank">
+                <span class="span">Code</span>
+            </a>
         </div>
       </li>
       <li>
@@ -122,6 +137,9 @@
             <a href="http://mini-jeopardy-app.herokuapp.com/" target="_blank">
               <span class="span">Working in a group of four people, we created a Jeopardy game. If you click add player you can log into Google and it will use your name for the leader board.  Each time the game refreshes it will pull from a jeopardy API and fill out the categories and questions.  We used HTML5, Bootstrap4, CSS, JavaScript, Heroku, JQuery, and Firebase.</span>
               <img src="assets/images/jeopardy.png" alt="Crystal Game" class="websitePics">
+            </a>
+            <a href="https://github.com/cbeez07/Jeopardy" target="_blank">
+                <span class="span">Code</span>
             </a>
         </div>
       </li>
